syntax = "proto3";
package desmos.profiles.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/desmos-labs/desmos/x/profiles/types";

// Params contains the parameters for the profiles module
message Params {
  MonikerParams moniker_params = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"moniker_params\""
  ];

  DTagParams dtag_params = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"dtag_params\""
  ];

  bytes max_bio_length = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"max_bio_length\""
  ];
}

// MonikerParams defines the parameters related to the profiles monikers
message MonikerParams {
  bytes min_moniker_length = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"min_moniker_length\""
  ];

  bytes max_moniker_length = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"max_moniker_length\""
  ];
}

// DTagParams defines the parameters related to profile DTags
message DTagParams {
  string reg_ex = 1 [ (gogoproto.moretags) = "yaml:\"reg_ex\"" ];

  bytes min_dtag_length = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"min_dtag_length\""
  ];

  bytes max_dtag_length = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"max_dtag_length\""
  ];
}
